# smalltime

./: .gitmodules  LICENSE-SPEC.md  README.md  nanotime-specification.md  smalltime-specification.md
reference-implementation/: CMakeLists.txt  LICENSE-CODE.md  README.md  meson.build
reference-implementation/c/tests/src/: library.cpp
reference-implementation/cmake/: SmalltimeConfig.cmake.in
reference-implementation/go/smalltime/: smalltime.go  smalltime_test.go
reference-implementation/include/smalltime/: nanotime.h  smalltime.h
reference-implementation/src/: library.c
reference-implementation/test/: CMakeLists.txt
reference-implementation/test/src/: library.cpp
reference-implementation/tests/: CMakeLists.txt
reference-implementation/tests/src/: library.cpp  nanotime_test.cpp  readme_example.cpp  readme_examples_test.cpp  smalltime_test.cpp
